samples/_failures_safe/1761338468_e83da9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_421cd64f.c: In function ‘main’:
./samples/SAFE/__tmp_421cd64f.c:176:5: error: expected expression at end of input
  176 |     if (fgets(input, sizeof(input), stdin) ==
      |     ^~
./samples/SAFE/__tmp_421cd64f.c:176:5: error: expected declaration or statement at end of input
